--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    padding: 18px;
+    padding: 20px;
 }
 .cabecalho-imagem {
     height: 65px;
@@ -85,7 +85,7 @@ body {
 
 .conteudo-principal-imagem {
     height: 450px;
-    padding: 8px;
+    padding: 18px;
 }
 
 .conteudo-secundario {
@@ -111,6 +111,90 @@ body {
     font-weight: 300;
     font-size: 17px;
     color: #FFF2EF;
+}
+
+.conteudo-secundario-imagem{
+    height: 500px;
+}
+
+.conteudo-enquete{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
+}
+
+.conteudo-enquete-titulo{
+    border-top: 0.4px solid #FFF2E7;
+    padding-top: 48px;
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 24px;
+    color: #FFF2EF;
+    margin-bottom: 16px;
+}
+
+.conteudo-enquete-paragrafo{
+    font-family: 'Sarala',sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: #fff2e7c4;
+    text-align: center;
+}
+
+.conteudo-terciario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
+}
+
+.conteudo-terciario-imagem{
+    height: 300px;
+    padding: 15px;
+    margin-left: 50px;
+}
+
+.conteudo-terciario-titulo{
+    border-top: 0.4px solid #FFF2E7;
+    padding-top: 48px;
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 24px;
+    color: #FFF2EF;
+    margin-bottom: 16px;
+}
+
+.conteudo-terciario-paragrafo{
+
+}
+
+.conteudo-quaternario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
+}
+
+.conteudo-quaternario-titulo{
+    border-top: 0.4px solid #FFF2E7;
+    padding-top: 48px;
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 24px;
+    color: #FFF2EF;
+    margin-bottom: 16px;
+}
+
+.conteudo-quaternario-email{
+    font-family: 'Sarala',sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: #fff2e7c4;
+    text-align: center;
 }
 
 .rodape {
